<resources>
    <string name="app_name">Hitung BMI</string>
    <string name="bmi_intro">BMI atau Body Mass Index Merupakan
        Cara Menentukan Apakah Berat Badanmu Ideal Atauu Tidak. Cobalah Sekarang</string>
    <string name="beratBadanText">Berat Badan (kg)</string>
    <string name="tinggiBadanText">Tinggi Badan (cm)</string>
    <string name="jenisKelaminText">Jenis Kelamin</string>
    <string name="priaRadioButton">Pria</string>
    <string name="wanitaRadioButton">Wanita</string>
    <string name="hitungButton">Hitung</string>
    <string name="bmi_x">BMI : %1$.2f</string>
    <string name="berat_x">BB: %1$.1f</string>
    <string name="tinggi_x">TB: %1$.1f</string>
    <string name="kurus">Kurus</string>
    <string name="ideal">Ideal</string>
    <string name="gemuk">Gemuk</string>
    <string name="kategori_x">Kategori : %1$s</string>
    <string name="berat_invalid">Berat Tidak Boleh Kosong</string>
    <string name="tinggi_invalid">Tinggi Tidak Boleh Kosong</string>
    <string name="gender_invalid">Pilih Jenis Kelamin, Tidak Boleh Kosong</string>
    <string name="resetButton">Reset</string>
    <string name="kosong"> </string>
    <string name="judul_kurus">Mengatasi Kekurusan </string>
    <string name="judul_gemuk">Mengatasi Kegemukan </string>
    <string name="judul_ideal">Menjaga Tetap Ideal </string>
    <string name="saran_kurus">Cobalah untuk makan porsi besar, seperti burger berukuran raksasa ini. </string>
    <string name="saran_ideal">Pertahankan gaya hidupmu! Tapi jangan kebanyakan gaya karena itu berbahaya.</string>
    <string name="saran_gemuk">Cobalah untuk olahraga lari. Kemanapun boleh, asal tidak lari dari kehidupan.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lihat_saran">Lihat Saran</string>
    <string name="copyright">Hitung BMI adalah aplikasi android untuk menghitung body mass index (BMI)
        sehingga seseorang dapat mengetahui apakah berat badannya ideal, gemuk atau kurus.
        <br></br><br></br> Aplikasi ini dibuat untuk kelas Mobpro 1. Temukan kodenya di https://github.com/D3IF-Cool/4302-hitung-bmi-rozyfauzan
        atau https://github.com/indraazimi/hitung-bmi
        <br></br><br></br> Copyright © 2021 Indra Azimi.
        <br></br> All rights reserved.
    </string>



    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">
        Berat badan: %1$s kg <br></br>
        Tinggi badan: %2$s cm <br></br>
        Jenis kelamin: %3$s<br></br><br></br>%4$s<br></br>%5$s  <br></br>


    </string>
    <string name="default_text">0</string>
    <string name="belum_ada_data">Belum Ada Data</string>
    <string name="histori">Histori</string>
    <string name="hapus_histori"> Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>

</resources>